додає оптимізовані зображення + кнопка на модалці

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -123,7 +123,7 @@
             <div class="order">
                 <button type="button" class="btn-circle cross-icon cl-order-btn" data-modal-close>
                     <svg class="cross-order_icon">
-                        <use href="././images/icons/sprite.svg#close-icon"></use>
+                        <use href="././images/icons/sprite.svg#crossclose-icon"></use>
                     </svg>
                 </button>
                 <h2 class="order_title">Your order</h2>
@@ -156,7 +156,7 @@
                         <div class="order-choise_label">
                             <label class="choise-label">
                                 <input name="product" type="checkbox" value="ice_coffee" class="order-choise_check" />
-                                <span class="order-choise_details">Ice-coffe</span>
+                                <span class="order-choise_details">Ice-coffee</span>
                             </label>
                             <label class="choise-label">
                                 <input type="number" name="coffee-number" class="portions-number" />
@@ -185,7 +185,7 @@
             <div class="order">
                 <button type="button" class="btn-circle cross-icon cl-order-btn" mob-data-mod-close>
                     <svg class="cross-order_icon">
-                        <use href="././images/icons/sprite.svg#close-icon"></use>
+                        <use href="././images/icons/sprite.svg#crossclose-icon"></use>
                     </svg>
                 </button>
                 <h2 class="order_title">Your order</h2>
@@ -218,7 +218,7 @@
                         <div class="order-choise_label">
                             <label class="choise-label">
                                 <input name="product" type="checkbox" value="ice_coffee" class="order-choise_check" />
-                                <span class="order-choise_details">Ice-coffe</span>
+                                <span class="order-choise_details">Ice-coffee</span>
                             </label>
                             <label class="choise-label">
                                 <input type="number" name="coffee-number" class="portions-number" />
