--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -112,6 +112,8 @@
 .btn-circle:hover .arrow-icon,
 .btn-circle:focus .aroww-icon,
 .btn-circle:hover .arrow-icon-1,
-.btn-circle:focus .aroww-icon-1 {
+.btn-circle:focus .aroww-icon-1,
+.btn-circle:hover .cross-order_icon,
+.btn-circle:focus .cross-order_icon {
   fill: $text-color-hero;
 }
