--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -237,7 +237,7 @@
 }
 
 .current,
-.nav-limk:focus,
+.nav-link:focus,
 .nav-link:hover {
   color: $title-text-color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -304,13 +304,13 @@
 
 .cl-order-btn {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 2%;
+  right: 3%;
 
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
 
-  background-color: $text-color;
+  
 
   border: transparent;
   &:hover,
@@ -318,9 +318,14 @@
     background-color: $hover-botton-color;
   }
   @media screen and (min-width: 768px) {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
   }
+}
+.cross-order_icon {
+  width: 14px;
+  height: 14px;
+  fill: $title-text-color;
 }
 
 .order_title {
@@ -336,6 +341,7 @@
     font-size: 30;
   }
 }
+
 .order_form {
   width: 100%;
 
