--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -300,6 +300,9 @@
     width: 480px;
     height: 80%;
   }
+  @media screen and (min-width: 1280px) {    
+    height: 90%;
+  }
 }
 
 .cl-order-btn {
