Добавил якоря секциям

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,22 +8,22 @@
 
       <ul class="site-nav list">
         <li class="nav-item list"><a class="nav-link link active" href="#home">Home</a></li>
-        <li class="nav-item list"><a class="nav-link link" href="#">About us</a></li>
-        <li class="nav-item list"><a class="nav-link link" href="#">How it’s made?</a></li>
-        <li class="nav-item list"><a class="nav-link link" href="#">Our products</a></li>
-        <li class="nav-item list"><a class="nav-link link" href="#">Contact</a></li>
+        <li class="nav-item list"><a class="nav-link link" href="#locations">About us</a></li>
+        <li class="nav-item list"><a class="nav-link link" href="#recipe">How it’s made?</a></li>
+        <li class="nav-item list"><a class="nav-link link" href="#products">Our products</a></li>
+        <li class="nav-item list"><a class="nav-link link" href="#footer">Contact</a></li>
       </ul>
 
       <div class="nav-buttons">
-        <button class="btn-menu-open" type="button" aria-label="Mobile menu open" data-modal-open> 
+        <button class="btn-menu-open" type="button" aria-label="Mobile menu open" data-modal-open>
           <svg class="menu-open" width="20" height="12">
             <use class="icon-open" href="./images/vector/icon-sprite.svg#icon-burger"></use>
           </svg>
         </button>
-  
+
         <button class="btn-purchase" type="button" aria-label="Button to buy a product">Buy now</button>
       </div>
- 
+
     </nav>
   </div>
 </header>
