--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,10 +7,10 @@
 
                 <ul class="anchors list">
                     <li class="anchors-item">
-                        <a href="#" class="anchors-button anchors-button-red  link">Products</a>
+                        <a href="#products" class="anchors-button anchors-button-red  link">Products</a>
                     </li>
                     <li class="anchors-item">
-                        <a href="#" class="anchors-button link">How it’s made?</a>
+                        <a href="#recipe" class="anchors-button link">How it’s made?</a>
                     </li>
                 </ul>
             </div>
