--- a/src/partials/recipe.html
+++ b/src/partials/recipe.html
@@ -1,4 +1,4 @@
-<section class="recipe">
+<section class="recipe" id="recipe">
   <div class="container">
     <p class="recipe_under-h"> tradition and love </p>
     <h2 class="recipe_title" id="recipe">how it’s made?</h2>
@@ -23,9 +23,9 @@
         <p class="recipe_bold-text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
           faucibus lorem eget, egestas eros.
           Maecenas eleifend erat at justo fringilla.</p>
-        <p class="recipe_text">Curabitur lacinia enim at ex blandit, vel pellentesque  odio  elementum.  Mauris  rhoncus
+        <p class="recipe_text">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus
           orci in imperdiet placerat.
-          Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras  massa  nibh,  tincidunt.
+          Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
           <br>
           <br>
           Aliquam erat volutpat. Aenean accumsan.
