--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-css">
+<footer class="footer-css" id="footer">
   <div class="container container-footer">
     <div class="footer-top">
       <div class="ice-cream-description">
@@ -10,39 +10,24 @@
         <div class="social-net">
           <ul class="list social-icons">
             <li class="social-icons-item">
-              <a
-                class="social-icons-link"
-                href="https://github.com/"
-                target="_blank"
-                rel="noopener noreferer"
-                aria-label="Github"
-              >
+              <a class="social-icons-link" href="https://github.com/" target="_blank" rel="noopener noreferer"
+                aria-label="Github">
                 <svg class="social-icons-svg gh-svg">
                   <use href="./images/vector/icon-sprite.svg#icon-github"></use>
                 </svg>
               </a>
             </li>
             <li class="social-icons-item">
-              <a
-                class="social-icons-link"
-                href="https://telegram.com/"
-                target="_blank"
-                rel="noopener noreferer"
-                aria-label="Telegram"
-              >
+              <a class="social-icons-link" href="https://telegram.com/" target="_blank" rel="noopener noreferer"
+                aria-label="Telegram">
                 <svg class="social-icons-svg tlgr-svg">
                   <use href="images/vector/icon-sprite.svg#icon-telegram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-icons-item">
-              <a
-                class="social-icons-link"
-                href="https://facebook.com/"
-                target="_blank"
-                rel="noopener noreferer"
-                aria-label="Facebook"
-              >
+              <a class="social-icons-link" href="https://facebook.com/" target="_blank" rel="noopener noreferer"
+                aria-label="Facebook">
                 <svg class="social-icons-svg fb-svg">
                   <use href="images/vector/icon-sprite.svg#icon-facebook"></use>
                 </svg>
@@ -54,8 +39,7 @@
         <p class="call">
           Feel free to contact
           <a href="tel:+610383766284" class="link number-footer">
-            +61 (0) 383 766 284</a
-          >
+            +61 (0) 383 766 284</a>
         </p>
       </div>
     </div>
