--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -26,23 +26,8 @@
   justify-content: flex-end;
 }
 
-.gh-svg {
-  width: 19px;
-  height: 19px;
-}
-
-.tlgr-svg {
-  width: 19px;
-  height: 15px;
-}
-
-.fb-svg {
-  width: 9px;
-  height: 19px;
-}
-
-
 .social-icons-link {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,6 +42,23 @@
     background-color: $color-accent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+}
+
+.gh-svg {
+  width: 19px;
+  height: 19px;
+}
+
+.tlgr-svg {
+  position: absolute;
+  left: 5px;
+  width: 19px;
+  height: 15px;
+}
+
+.fb-svg {
+  width: 9px;
+  height: 19px;
 }
 
 .social-icons-item:not(:last-child) {
