--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -54,13 +54,10 @@
   }
   
   @media screen and (min-width: 768px) {
-    height: 665px;
+    height: 750px;
     margin-top: 197px;
   }
 
-  @media screen and (min-width: 1200px) {
-    height: 697px;
-  }
 }
 
 .shops-hide {
@@ -122,14 +119,13 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 1.86;
-  display: flex;
-  align-items: center;
   text-align: center;
+  color: #FFFFFF;
 
   background-color: $main-coffee;
   width: 80px;
-  height: 16px;
   margin-bottom: 25px;
+  border-radius: 6px;
 
   @media screen and (min-width: 768px) {
     font-size: 16px;
@@ -141,7 +137,6 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 1.86;
-    text-align: center;
     margin-bottom: 30px;
     color: #FFFFFF;
   }
@@ -151,14 +146,13 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 1.86;
-  display: flex;
-  align-items: center;
   text-align: center;
+  color: #FFFFFF;
 
   background-color: $green-color;
   width: 130px;
-  height: 16px;
   margin-bottom: 25px;
+  border-radius: 6px;
 
   @media screen and (min-width: 1200px) {
     font-weight: 500;
