--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -116,7 +116,7 @@
 #go-top {
   position: fixed;
   right: 10px;
-  bottom: 200px;
+  bottom: 100px;
   width: 50px;
   height: 50px;
   border-color: transparent;
@@ -125,6 +125,11 @@
   transition: filter 250ms $timing-function;
   display: none;
   cursor: pointer;
+
+  @include for-size(tablet) {
+    bottom: 200px;
+  }
+
   &:hover,
   &:focus {
     filter: brightness(1.5);
