--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,5 +1,5 @@
 .products-container {
-  padding-top: 221px;
+  padding-top: 121px;
   padding-bottom: 98px;
 
   @media screen and (min-width: 768px) {
@@ -22,6 +22,7 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+  padding-bottom: 31px;
 
   &-text-title {
     font-weight: normal;
@@ -57,6 +58,9 @@
       font-size: 58px;
       line-height: 1.13;
     }
+  }
+  @media screen and (min-width: 768px) {
+    padding-bottom: 0;
   }
 }
 
