Добавляет анимацию при ховере

--- a/src/sass/layouts/_cards.scss
+++ b/src/sass/layouts/_cards.scss
@@ -305,6 +305,7 @@
 
   color: $main-text-color;
   background-color: $bg-white;
+  @extend %animation;
 
   &:hover,
   &:focus {
@@ -333,6 +334,7 @@
 
   color: $main-text-color;
   background-color: $bg-white;
+  @extend %animation;
 
   &:hover,
   &:focus {
@@ -349,6 +351,7 @@
 }
 
 .cards-icon {
+  @extend %animation;
   display: inline-block;
   margin-left: 4px;
   width: 19px;
