--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -77,12 +77,12 @@
     font-weight: 700;
     font-size: 16px;
     font-family: 'DM Sans', sans-serif;
+    @extend %animation;
 
     &:hover,
     &:focus {
       color: $main-text-color;
       transition-property: color;
-      @extend %animation;
     }
   }
 }
@@ -108,7 +108,8 @@
     padding-right: 37px;
     background-color: $bg-white;
     color: $main-text-color;
-
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
       background-color: $main-text-color;
@@ -130,4 +131,5 @@
   display: inline-flex;
   right: 37px;
   fill: $main-text-color;
+  @extend %animation;
 }
