--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -168,6 +168,7 @@
   font-size: 8px;
   line-height: 1.25;
   color: $main-text-color;
+  @extend %animation;
 
   background-color: $bg-white;
   border: none;
@@ -249,6 +250,7 @@
 }
 
 .hero-link {
+  @extend %animation;
   @include for-size(mobile-only) {
     display: none;
   }
@@ -281,6 +283,7 @@
   width: 8px;
   height: 8px;
   fill: $main-text-color;
+  @extend %animation;
 }
 
 .hero-link:hover > .hero-arrow,
@@ -300,7 +303,6 @@
     width: 143px;
     height: 336px;
     top: -19px;
-    // left: 390px;
     left: 50%;
   }
 
@@ -308,7 +310,6 @@
     width: 236px;
     height: 557px;
     top: -27px;
-    // left: 500px;
     left: 47%;
   }
 }
@@ -321,8 +322,6 @@
     display: block;
     width: 124px;
     height: 126px;
-    // top: 145px;
-    // left: 30px;
     top: -45px;
     left: -1px;
   }
@@ -330,8 +329,6 @@
   @include for-size(desktop) {
     width: 188px;
     height: 191px;
-    // top: 290px;
-    // left: 20px;
     top: -75px;
     left: 2px;
   }
@@ -351,8 +348,6 @@
     width: 168px;
     height: 133px;
     top: 184px;
-    // left: 565px;
-    // left: 75%;
     left: -120px;
   }
 
@@ -360,8 +355,6 @@
     width: 293px;
     height: 232px;
     top: 299px;
-    // left: 755px;
-    // left: 72%;
     top: 258px;
     left: -195px;
   }
