--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -15,16 +15,13 @@
   }
 
   .product-benefit {
-    margin-top: 0;
     margin-bottom: 15px;
 
     font-family: Titan One;
-    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.16;
 
-    text-align: center;
     text-transform: uppercase;
 
     color: $color-background-hero;
@@ -36,20 +33,18 @@
 
     @media screen and (min-width: $desktop) {
       font-size: 30px;
-      line-height: 34px;
+      line-height: 1.13;
       letter-spacing: 0.04em;
     }
   }
 
   .product-title {
-    margin-top: 0;
     margin-bottom: 144px;
 
     font-family: Titan One;
     font-weight: 400;
     font-size: 34px;
-    line-height: 39px;
-    text-align: center;
+    line-height: 1.147;
     letter-spacing: 0.04em;
     text-transform: uppercase;
 
@@ -79,130 +74,123 @@
       justify-content: center;
     }
   }
+}
 
-  .product-item {
-    position: relative;
-    padding: 160px 40px 40px 40px;
+.product-item {
+  position: relative;
+  padding: 160px 40px 40px;
 
-    color: $color-main;
-    background-color: $color-main-product-1;
-    border-radius: 24px;
+  color: $color-main;
+  background-color: $color-main-product-1;
+  border-radius: 24px;
 
-    &:not(:last-child) {
-      @media screen and (max-width: 739px) {
-        margin-bottom: 130px;
-      }
-
-      @media screen and (min-width: $desktop) {
-        margin-right: 30px;
-      }
-    }
-
-    @media screen and (min-width: $tablet) {
-      width: 220px;
-      padding: 152px 11px 40px 11px;
+  &:not(:last-child) {
+    @media screen and (max-width: 739px) {
+      margin-bottom: 130px;
     }
 
     @media screen and (min-width: $desktop) {
-      width: 329px;
-      height: 525px;
-      padding: 163px 44px 50px 44px;
+      margin-right: 30px;
     }
+  }
 
-    .product-content {
-      .product-item-title {
-        position: relative;
-        margin: 0;
-        padding-bottom: 30px;
-        font-family: Titan One;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
+  @media screen and (min-width: $tablet) {
+    width: 220px;
+    padding: 152px 11px 40px;
+  }
 
-        &::after {
-          content: '';
-          display: block;
-          width: 26px;
-          height: 6px;
-          margin-left: auto;
-          margin-right: auto;
-          position: absolute;
-          left: 50%;
-          bottom: 0;
-          transform: translate(-50%);
+  @media screen and (min-width: $desktop) {
+    width: 329px;
+    height: 525px;
+    padding: 163px 44px 50px;
+  }
 
-          background-image: url(./../images/vector/dots.svg);
-          background-repeat: no-repeat;
-          background-size: contain;
-          color: $color-main;
-          text-align: center;
-        }
+  .product-item-title {
+    position: relative;
+    padding-bottom: 30px;
+    font-family: Titan One;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
 
-        @media screen and (min-width: $desktop) {
-          padding-bottom: 32px;
-          font-size: 30px;
-          line-height: 1.13;
-        }
-      }
+    &::after {
+      content: '';
+      display: block;
+      width: 26px;
+      height: 6px;
 
-      .product-item-text {
-        margin: 0;
-        padding-top: 30px;
-        padding-bottom: 40px;
-        font-family: DM Sans;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.5;
-        text-align: center;
-        letter-spacing: 0.04em;
-
-        color: $color-main;
-
-        @media screen and (min-width: $tablet) {
-          line-height: 1.78;
-        }
-
-        @media screen and (min-width: $desktop) {
-          padding-bottom: 62px;
-          font-size: 16px;
-          line-height: 1.75;
-        }
-      }
-    }
-
-    .product-link {
-      display: inline-block;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-
-      color: $color-accent;
-    }
-
-    .product-img {
       position: absolute;
-      top: -113px;
-      left: 16px;
+      left: 50%;
+      bottom: 0;
+      transform: translate(-50%);
 
-      @media screen and (min-width: $tablet) {
-        width: 220px;
-        top: -21%;
-        left: 0%;
-      }
-
-      @media screen and (min-width: $desktop) {
-        width: 335px;
-        top: -40%;
-      }
+      background-image: url(./../images/vector/dots.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
     }
 
-    &.beige-bg {
-      background-color: $color-main-product-2;
+    @media screen and (min-width: $desktop) {
+      padding-bottom: 32px;
+      font-size: 30px;
+      line-height: 1.13;
+    }
+  }
+
+  .product-item-text {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: DM Sans;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+
+    color: $color-main;
+
+    @media screen and (min-width: $tablet) {
+      padding-bottom: 40px;
+      line-height: 1.78;
     }
 
-    &.green-bg {
-      background-color: $color-main-product-3;
+    @media screen and (min-width: $desktop) {
+      padding-bottom: 62px;
+      font-size: 16px;
+      line-height: 1.75;
     }
+  }
+
+  .product-link {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+
+    color: $color-accent;
+  }
+
+  .product-img {
+    position: absolute;
+    top: -113px;
+    left: 16px;
+
+    @media screen and (min-width: $tablet) {
+      width: 220px;
+      top: -21%;
+      left: 0%;
+    }
+
+    @media screen and (min-width: $desktop) {
+      width: 335px;
+      top: -40%;
+    }
+  }
+
+  &.beige-bg {
+    background-color: $color-main-product-2;
+  }
+
+  &.green-bg {
+    background-color: $color-main-product-3;
   }
 }
