--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -424,7 +424,7 @@
 // MODAL-FRANCHISE
 .modal-franchise {
   position: absolute;
-  top: 50%;
+  top: 10%;
   left: 50%;
   width: calc(100% - 30px);
   height: auto;
@@ -432,11 +432,16 @@
   background-color: #fff;
   border-radius: 15px;
   border: 2px solid $secondary-accent;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -5%) scale(1);
   transition: transform 0.5s ease-in;
 
   @include for-size(mob-tab) {
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
     width: 500px;
+  }
+
+  @include for-size(mob-tab) {
   }
 }
 
