--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -6,6 +6,7 @@
   bottom: 0;
   background-color: rgba(25, 28, 38, 0.8);
   z-index: 100;
+  overflow-y: scroll;
 
   opacity: 1;
   transition: opacity 0.5s ease-in;
@@ -24,26 +25,24 @@
   display: flex;
   position: absolute;
 
-  top: 50%;
+  top: 10%;
   left: 50%;
 
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -5%) scale(1);
   transition: transform 0.5s ease-in;
 
   @media screen and (max-width: 480px) {
     max-width: 480px;
-    left: 47%;
-    width: 100%;
-    max-width: 609px;
+    width: calc(100% - 30px);
   }
   @media screen and(min-width:481px) {
     width: 450px;
   }
   @media screen and (max-width: 1199px) {
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-right: 15px;
-    margin-left: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: auto;
+    margin-left: auto;
   }
   @media screen and(min-width:1200px) {
     width: 528px;
