Убрала скролл боди при открытых модалках

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -63,7 +63,7 @@
                         </button>
                 </li>
                 <li class="contact-list-btn-item">                
-                        <button class="link btn-third contact-btn-third" type="button" data-franchise-modal-open>Franchise
+                        <button class="link btn-third contact-btn-third" type="button" data-franchise-open-modal>Franchise
                         <svg class="contact-svg-third">
                             <use href="./images/icons/sprite.svg#tip"></use>
                         </svg>
@@ -93,9 +93,9 @@
 
     <!-- franchize -->
 
-    <div class="contact-backdrop is-hidden" data-franchise-modal>
+    <div class="contact-backdrop is-hidden" data-franchise-backdrop>
         <div class="modal-franchise">
-            <button type="button" class="contact-modal-close"  data-franchise-modal-close>
+            <button type="button" class="contact-modal-close" data-franchise-close-modal>
                 <svg class="contact-modal-close-svg">
                     <use href="./images/icons/sprite.svg#close"></use>
                 </svg>
