--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
       <button class="menu-btn close-menu" type="button" data-menu-close></button>
 
       <button class="buy-now-btn" type="button"> Buy now </button>
-
+    <nav>
       <ul class="menu-list">
         <li>
           <a href="./index.html" class="menu-nav current">Home</a>
@@ -28,6 +28,7 @@
           <a href="#contact" class="menu-nav">Contact</a>
         </li>
       </ul>
+    </nav>
     </div>
 
   </div>  
