--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -10,10 +10,10 @@
     padding-right: 8px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     padding-top: 3px;
     padding-right: 0px;
-    padding-left: 57px;
+    padding-left: 38px;
   }
 }
 
@@ -22,11 +22,11 @@
     margin-top: 137px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding-top: 3px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     padding-top: 84px;
     padding-left: 38px;
   }
@@ -55,7 +55,7 @@
       font-size: 34px;
       line-height: 0.905;
     }
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       font-size: 58px;
     }
   }
@@ -64,7 +64,7 @@
     font-size: 22px;
     line-height: 1.1363;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     font-size: 38px;
     line-height: 1.145;
   }
@@ -79,7 +79,7 @@
     margin-top: 20px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-top: 25px;
   }
 
@@ -94,7 +94,7 @@
     font-size: 8px;
     line-height: 1, 25;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       margin-right: 15px;
 
       width: 102px;
@@ -114,7 +114,7 @@
     font-size: 8px;
     line-height: 1, 25;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       width: 138px;
       height: 40px;
       font-size: 14px;
@@ -131,7 +131,7 @@
     margin-top: 19px;
     height: 126px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-top: 56px;
     height: 191px;
   }
@@ -141,7 +141,7 @@
   width: 120px;
   height: 124px;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 188px;
     height: 191px;
   }
@@ -155,7 +155,7 @@
     /*padding-top: 47px;*/
     padding-bottom: 6px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     //padding-top: 55px;
     padding-bottom: 11px;
   }
@@ -172,7 +172,7 @@
 
   border: none;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 26px;
     height: 26px;
   }
@@ -193,7 +193,7 @@
   line-height: 1.5;
   color: $text-color-hero;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-top: 0;
 
     margin-bottom: 20px;
@@ -211,7 +211,7 @@
   width: 7px;
   height: 5px;;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 13px;
     height: 7px;
   }
@@ -224,7 +224,7 @@
     display: block;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     padding-top: 63px;
   }
 }
@@ -238,8 +238,9 @@
 
     margin-bottom: 64px;
   }
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 90px;
+    padding-right: 6px;
   }
 }
 
@@ -265,13 +266,13 @@
 
     border-radius: 50%;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       width: 30px;
       height: 30px;
     }
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 92px;
     height: 77px;
   }
@@ -280,7 +281,7 @@
     justify-content: center;
     flex-direction: column;*/
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     height: 76x;
 
     /*padding-right: 18px;*/
@@ -304,7 +305,7 @@
 
     color: $title-text-color;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       font-size: 46px;
       line-height: 1.1521;
     }
@@ -321,7 +322,7 @@
 
     color: $text-color-hero;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       margin-top: 2px;
 
       font-size: 14px;
@@ -332,7 +333,7 @@
 .caffee {
   margin-bottom: 14px;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 30px;
   }
 }
@@ -342,7 +343,7 @@
   width: 168px;
   height: 133px;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 293px;
     height: 232px;
   }
