--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -11,12 +11,12 @@
   position: relative;
   z-index: 1002;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     padding: 0;
     height: 665px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding: 0;
     padding-right: 34px;
 
@@ -37,7 +37,7 @@
     background-position: left 117px bottom 0px, top 92px right 0px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 768px;
     padding-top: 37px;
 
@@ -47,10 +47,11 @@
     background-position: top 63px right 214px, top 31px right 103px;
   }
 
-  @media screen and (min-width: 1280px) {
-    width: 1280px;
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
     padding-top: 37px;
-    padding-right: 115px;
+    padding-right: 109px;
+    padding-left: 0px;
 
     background-image: url('./../images/hero/icecream_desktop.png'),
       url('./../images/hero/ellipse_desktop.png');
@@ -69,12 +70,12 @@
 
   height: 56px;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     padding-right: 0px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
-    padding-right: 0px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-right: 6px;
     padding-left: 19px;
   }
 }
@@ -94,7 +95,7 @@
   justify-content: center;
   align-items: center;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     display: none;
   }
 }
@@ -128,7 +129,7 @@
         margin-left: 12px;
       }
     }
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       margin-right: 0px;
     }
   }
@@ -204,7 +205,7 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 450ms;
 
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
       display: none;
     }
   }
@@ -246,7 +247,7 @@
 .site-nav {
   display: none;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     display: flex;
   }
 }
@@ -300,7 +301,7 @@
     width: 480px;
     height: 80%;
   }
-  @media screen and (min-width: 1280px) {    
+  @media screen and (min-width: 1200px) {    
     height: 90%;
   }
 }
