Вносит измеения по дизайну

--- a/src/partials/burger.html
+++ b/src/partials/burger.html
@@ -1,5 +1,4 @@
-
-<div class="mobile-container" data-menu>
+<!-- <div class="mobile-container" data-menu>
     <div class="mobile-content">
 
 
@@ -20,5 +19,4 @@
         </button>
     </div>
 
-</div>
-
+</div> -->
