--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,14 +10,16 @@
                 <li class="item"> <a href="" class="link nav-link"> Our product</a> </li>
                 <li class="item"> <a href="" class="link nav-link"> Contacts</a> </li>
             </ul>
-           
+
             <button type="button" class="menu-button" data-menu-button>
                 <svg width="40" height="40">
                     <use class="icon-menu-open" href="./images/sprite.svg#icon-menu40px"></use>
                     <use class="icon-menu-close" href="./images/sprite.svg#icon-close40px"></use>
                 </svg>
             </button>
-           
+
+
+
             <button type="button" class="btn-header">
                 <svg class="btn-icon" width="4" height="8">
                     <use href="./images/sprite.svg#icon-cheveron-right">
@@ -25,6 +27,28 @@
                 </svg>Buy now</button>
 
         </nav>
+        <div class="mobile-container" data-menu>
+            <div class="mobile-content">
+
+
+                <button type="button" class="btn-burger">
+                    <svg class="btn-icon" width="10" height="10">
+                        <use href="./images/sprite.svg#icon-cheveron-right">
+                        </use>
+                    </svg>Buy now</button>
+
+                <ul class="list mobile-menu">
+                    <li class="item"> <a href="" class="link nav-link"> Home </a> </li>
+                    <li class="item"> <a href="" class="link nav-link"> About us</a> </li>
+                    <li class="item"> <a href="" class="link nav-link"> How it's made?</a> </li>
+                    <li class="item"> <a href="" class="link nav-link"> Our product</a> </li>
+                    <li class="item"> <a href="" class="link nav-link"> Contacts</a> </li>
+                </ul>
+
+                </button>
+            </div>
+
+        </div>
+
     </div>
 </header>
-
