--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -79,9 +79,16 @@
 }
 
 .hero-amount {
-  @include for-size(mobile-only) {
-    display: none;
+  // @include for-size(mobile-only) {
+  //   display: none;
+  // }
+
+  display: none;
+
+  @include for-size(mobile) {
+    display: block;
   }
+
   @include for-size(tablet) {
     display: block;
   }
@@ -153,6 +160,9 @@
 }
 
 .hero-wrap {
+  @include for-size(mobile) {
+    display: flex;
+  }
   @include for-size(tablet) {
     display: flex;
   }
@@ -303,7 +313,7 @@
     width: 143px;
     height: 336px;
     top: -19px;
-    left: 50%;
+    left: 45%;
   }
 
   @include for-size(desktop) {
@@ -342,6 +352,16 @@
   position: absolute;
   z-index: 2;
   display: none;
+
+  @include for-size(mobile) {
+    display: block;
+    width: 198px;
+    height: 163px;
+    // top: 30px;
+    // left: 70%;
+    top: 156px;
+    left: -130%;
+  }
 
   @include for-size(tablet) {
     display: block;
