--- a/src/sass/layouts/_cards.scss
+++ b/src/sass/layouts/_cards.scss
@@ -20,10 +20,16 @@
 }
 
 .cards {
-  max-width: 320px;
+  // max-width: 320px;
+  min-width: 320px;
   margin-left: auto;
   margin-right: auto;
   padding: 86px 50px 113px 50px;
+  width: 100%;
+
+  @include for-size(mobile) {
+    max-width: 520px;
+  }
 
   @include for-size(tablet) {
     max-width: 768px;
@@ -295,6 +301,7 @@
 
 .button-dark {
   width: 161px;
+  margin-right: 10px;
 
   @include for-size(tablet) {
     width: 191px;
