--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -3,6 +3,13 @@
 }
 
 .footer-container {
+  @include for-size(mobile) {
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
   @include for-size(tablet) {
     display: flex;
     justify-content: space-between;
