Revert "Вносит измеения по дизайну"

--- a/src/partials/burger.html
+++ b/src/partials/burger.html
@@ -1,4 +1,5 @@
-<!-- <div class="mobile-container" data-menu>
+
+<div class="mobile-container" data-menu>
     <div class="mobile-content">
 
 
@@ -19,4 +20,5 @@
         </button>
     </div>
 
-</div> -->
+</div>
+
