--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -79,16 +79,9 @@
 }
 
 .hero-amount {
-  // @include for-size(mobile-only) {
-  //   display: none;
-  // }
-
-  display: none;
-
-  @include for-size(mobile) {
-    display: block;
+  @include for-size(mobile-only) {
+    display: none;
   }
-
   @include for-size(tablet) {
     display: block;
   }
@@ -160,9 +153,6 @@
 }
 
 .hero-wrap {
-  @include for-size(mobile) {
-    display: flex;
-  }
   @include for-size(tablet) {
     display: flex;
   }
@@ -313,7 +303,7 @@
     width: 143px;
     height: 336px;
     top: -19px;
-    left: 45%;
+    left: 50%;
   }
 
   @include for-size(desktop) {
@@ -352,16 +342,6 @@
   position: absolute;
   z-index: 2;
   display: none;
-
-  @include for-size(mobile) {
-    display: block;
-    width: 198px;
-    height: 163px;
-    // top: 30px;
-    // left: 70%;
-    top: 156px;
-    left: -130%;
-  }
 
   @include for-size(tablet) {
     display: block;
