--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,8 +1,3 @@
-.body-cover {
-  position: relative;
-  overflow: hidden;
-}
-
 .header-section {
   background-color: $bg-hero;
 }
@@ -11,11 +6,11 @@
   padding-bottom: 16px;
   padding-top: 16px;
 
-  // @include for-size(tablet) {
-  //   display: flex;
-  //   justify-content: space-between;
-  //   align-items: center;
-  // }
+  @include for-size(tablet) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   @include for-size(desktop) {
     min-width: 1050px;
@@ -36,10 +31,10 @@
   //   justify-content: flex-end;
   // }
 
-  // @include for-size(desktop) {
-  //   display: flex;
-  //   align-items: center;
-  // }
+  @include for-size(desktop) {
+    display: flex;
+    align-items: center;
+  }
   .logo-link {
     display: flex;
     width: 200px;
