Добавил падинги в герое

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -73,6 +73,10 @@
   display: flex;
   justify-content: space-between;
 
+  @media screen and (min-width: $tablet) {
+    padding-right: 7px;
+  }
+
   @media screen and (min-width: $desktop) {
     margin-bottom: 60px;
     padding-left: 70px;
