--- a/src/sass/layouts/_cards.scss
+++ b/src/sass/layouts/_cards.scss
@@ -3,17 +3,21 @@
   background-image: linear-gradient($bg-white 20px, $bg-pink 20px);
   background-repeat: no-repeat;
 
-  //   @include for-size(desktop) {
-  //     background-image: url(../image/desktop/cards/sectionbgcards.png);
-  //   }
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient($bg-white 37px, $bg-pink 37px);
+  }
 
-  //   @media screen and (min-device-pixel-ratio: 2),
-  //     screen and (-webkit-min-device-pixel-ratio: 2),
-  //     screen and (-o-min-device-pixel-ratio: 2/1),
-  //     screen and (min-resolution: 192dpi),
-  //     screen and (min-resolution: 2dppx) {
-  //     background-image: url(../image/desktop/cards/sectionbgcards@2x.png);
-  //   }
+  @include for-size(desktop) {
+    background-image: url(../images/desktop/cards/sectionbgcards.png),
+      linear-gradient($bg-white 234px, $bg-pink 234px);
+    //   @media screen and (min-device-pixel-ratio: 2),
+    //     screen and (-webkit-min-device-pixel-ratio: 2),
+    //     screen and (-o-min-device-pixel-ratio: 2/1),
+    //     screen and (min-resolution: 192dpi),
+    //     screen and (min-resolution: 2dppx) {
+    //     background-image: url(../images/desktop/cards/sectionbgcards@2x.png);
+    //   }
+  }
 
   background-position: 0 234px, 0 0;
   background-size: contain, auto;
