фикс ховера кнопки на секции how-made

--- a/src/sass/layouts/_how-made.scss
+++ b/src/sass/layouts/_how-made.scss
@@ -181,9 +181,7 @@ picture {
   &:hover,
   &:focus {
     background: #ecebeb;
-    .hm_icon {
-      fill: $white;
-    }
+    color: $primary-accent;
   }
 
   .hm_icon {
