--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,9 @@
 <section class="hero">
   <div class="container">
+    <div class="hero-circle"></div>
+    <div class="hero-girl"></div>
+    <div class="hero-milk"></div>
+    <div class="hero-ice-cream"></div>
     <div
       class="hero-container"
       data-aos="products-card-title-animation"
@@ -43,7 +47,5 @@
         </svg>
       </a>
     </div>
-    <div class="hero-girl"></div>
-    <div class="hero-milk"></div>
   </div>
 </section>
