добавила ховер на фото в секции продукты + оверфлоу для бенефитс

--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -72,6 +72,12 @@
   top: -113px;
   left: 50%;
   transform: translateX(-50%);
+  @include for-size(desktop) {
+    &:hover {
+      background: url(../images/pictures/products/desktop/background_ice_2x_d.png);
+      background-position: top center;
+    }
+  }
 }
 
 .title-accent {
