--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -125,6 +125,9 @@
   transition: filter 250ms $timing-function;
   display: none;
   cursor: pointer;
+  @include for-size(mobile-only) {
+    opacity: 0.5;
+  }
 
   @include for-size(tablet) {
     bottom: 200px;
