--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,53 +1,62 @@
 <section class="slider">
-  <article class="slider-article">
-    <picture class="slider-img">
-      <source srcset="./images/bitmap/slider/desk-woman@1x.png 1x, ./images/bitmap/slider/desk-woman@2x.png 2x" media="(min-width: 1280px)" />
-      <source srcset="./images/bitmap/slider/tab-woman@1x.png 1x, ./images/bitmap/slider/tab-woman@2x.png 2x" media="(min-width: 740px)" />
-      <source srcset="./images/bitmap/slider/mob-woman@1x.png 1x, ./images/bitmap/slider/mob-woman@2x.png 2x" media="(max-width: 739px)" />
-      <img src="./images/bitmap/slider/mob-woman@1x.png" alt="foto of testimonials1" width="85" height="85" />
-    </picture>
-    <p class="slider-text">
-      Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-      Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-      ipsum primis in nibh vel risus.
-    </p>
-    <p class="slider-subtitle">Emily, Los Angeles</p>
+  <div class="container">
 
-    <div role="group" class="radio-buttons">
-      <input id="r1" class="rad-btn" type="radio" name="slide" checked>
-      <label for="r1"></label>
-      <input id="r2" class="rad-btn" type="radio" name="slide">
-      <label for="r2"></label>
-      <input id="r3" class="rad-btn" type="radio" name="slide">
-      <label for="r3"></label>
+    <div class="main-slider">
+      <div class="sliders">
+        <input id="r1" class="rad-btn" type="radio" name="slide" checked>
+        <input id="r2" class="rad-btn" type="radio" name="slide">
+        <input id="r3" class="rad-btn" type="radio" name="slide">
+
+        <article class="slider-article s1">
+          <picture class="slider-img">
+            <source srcset="./images/bitmap/slider/desk-woman@1x.png 1x, ./images/bitmap/slider/desk-woman@2x.png 2x"
+              media="(min-width: 1280px)" />
+            <source srcset="./images/bitmap/slider/tab-woman@1x.png 1x, ./images/bitmap/slider/tab-woman@2x.png 2x"
+              media="(min-width: 740px)" />
+            <source srcset="./images/bitmap/slider/mob-woman@1x.png 1x, ./images/bitmap/slider/mob-woman@2x.png 2x"
+              media="(max-width: 739px)" />
+            <img src="./images/bitmap/slider/mob-woman@1x.png" alt="foto of testimonials1" width="85" height="85" />
+          </picture>
+          <p class="slider-text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+            ipsum primis in nibh vel risus.
+          </p>
+          <p class="slider-subtitle">Emily, Los Angeles</p>
+        </article>
+        <article class="slider-article">
+          <img class="slider-img" src="./images/bitmap/slider/desk-yellow-dress@1x.png" width="85" height="85"
+            alt="foto of testimonials1" />
+          <p class="slider-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ut saepe ad odio eius modi, debitis sequi
+            error
+            et
+            laudantium deserunt voluptatibus exercitationem repellendus.
+          </p>
+          <p class="slider-subtitle">Marry, Boston</p>
+        </article>
+        <article class="slider-article">
+          <img class="slider-img" src="./images/bitmap/slider/desk-in-glassess@1x.png" width="85" height="85"
+            alt="foto of testimonials1" />
+          <p class="slider-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae aspernatur illum unde ex, fugit repellat,
+            magnam
+            saepe deserunt molestias libero earum officiis placeat dolorum.
+          </p>
+          <p class="slider-subtitle">Ellisabet, New York</p>
+        </article>
+      </div>
+
+      <div role="group" class="radio-buttons">
+        <label for="r1"></label>
+        <label for="r2"></label>
+        <label for="r3"></label>
+      </div>
+
     </div>
-  </article>
-  <!--  <article class="slider-article">
-      <img
-        class="slider-img"
-        src="./images/bitmap/slider/desk-yellow-dress@1x.png"
-        width="85"
-        height="85"
-        alt="foto of testimonials1"
-      />
-      <p class="slider-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ut saepe ad odio eius modi, debitis sequi error et laudantium deserunt voluptatibus exercitationem repellendus.
-      </p>
-      <p class="slider-subtitle">Marry, Boston</p>
-    </article>
-    <article class="slider-article">
-      <img
-        class="slider-img"
-        src="./images/bitmap/slider/desk-in-glassess@1x.png"
-        width="85"
-        height="85"
-        alt="foto of testimonials1"
-      />
-      <p class="slider-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae aspernatur illum unde ex, fugit repellat, magnam saepe deserunt molestias libero earum officiis placeat dolorum.
-      </p>
-      <p class="slider-subtitle">Ellisabet, New York</p>
-    </article> -->
+
+  </div>
+
 </section>
 <!--  <script
     type="text/javascript"
